fixing position of nav on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,10 @@ main #one, main #two {
         height: calc((var(--image_height)) / 2);
     }
 
+    nav {
+        top: 0;
+    }
+    
     nav ul li a {
         padding: 10px 20px 10px 20px;
         font-size: small;
